<resources>
    <string name="donvi">HueWACO</string>
    <string name="app_name">HueWACO CSKH</string>
    <string name="android">Android</string>
    <string name="tab_quyen">Quyển</string>
    <string name="tab_search">Tìm kiếm</string>
    <string name="tab_setting">Cài đặt</string>
    <string name="processing">Đang xử lý...</string>
    <string name="waiting">Waiting</string>
    <string name="share_file_mtb">Gửi tài liệu từ HueWACO CSKH Android</string>
    <string name="share_doc">Chia sẻ tài liệu</string>
    <string name="nointernet">Không có kết nối internet/wifi/3G</string>
    <string name="splash_cty">HueWACO</string>
    <string name="splash_title1">Trung tâm chăm sóc khách hàng</string>
    <string name="splash_title2">Công ty cổ phần cấp nước Thừa Thiên Huế</string>
    <string name="intro_title">Ứng dụng di động chăm sóc khách hàng qua thiết bị di động của Công ty cổ phần cấp nước Thừa Thiên Huế. Hỗ trợ khách hàng cập nhật thông tin kịp thời về hóa đơn tiền nước, lịch tạm ngừng cung cấp nước, tra cứu điểm thu, thanh toán tiền nước trực tuyến,… qua thiết bị di động. Ứng dụng hoàn toàn miễn phí.</string>
    <string name="hotline">18000036</string>
    <string name="intro_hotro_dichvu_nuoc">Hỗ trợ các dịch vụ về nước</string>
    <string name="khong_cap_quyen_truy_cap">Bạn đã không cấp quyền cho ứng dụng do đó không thể thực hiện được chức năng này. Bạn phải cấp quyền thì ứng dụng mới thực hiện được.</string>
    <string name="khong_phone">Chưa cài đặt số điện thoại</string>
    <string name="login_title1">Để sử dụng đầy đủ các tính năng mời quý Khách hàng bấm vào nút Đăng nhập</string>
    <string name="login_btn_dangnhap">ĐĂNG NHẬP</string>
    <string name="login_dangky_capdien">Đăng ký cấp nước mới</string>
    <string name="login_goi_tong_dai">Gọi tổng đài CSKH</string>
    <string name="login_hdsd">Hướng dẫn sử dụng</string>
    <string name="login_web_cskh">Website CSKH</string>
    <string name="login_thongtin_ungdung">Thông tin ứng dụng</string>
    <string name="ttud_title">Thông tin ứng dụng</string>
    <string name="ttud_ungdung">Ứng dụng:</string>
    <string name="ttud_hdh">Hệ điều hành:</string>
    <string name="ttud_phienban">Phiên bản hiện tại:</string>
    <string name="ttud_ktcapnhat">Kiểm tra cập nhật</string>
    <string name="hdsd_title">Hướng dẫn sử dụng</string>
    <string name="dangnhap_thongbao"><b>Mời quý khách nhập tài khoản đã có trên website chăm sóc khách hàng http://huewaco.net.vn để đăng nhập vào tài khoản</b></string>
    <string name="dangnhap_user">Tên đăng nhập</string>
    <string name="dangnhap_password">Mật khẩu</string>
    <string name="dangnhap_sdt_makh">Đăng nhập bằng số điện thoại và mã khách hàng</string>
    <string name="dangnhap_kichhoatungdung">KÍCH HOẠT ỨNG DỤNG</string>
    <string name="dangnhap_thongbao1">Vui lòng nhập số điện thoại và mã khách hàng sử dụng nước. Số điện thoại là số điện thoại có trên hợp đồng hoặc là số điện thoại đã đăng ký nhận tin SMS. Mã khách hàng có trong hóa đơn tiền nước hàng tháng của quý khách. Quý khách có thể đăng ký dịch vụ cho nhiều mã khách hàng của mình.</string>
    <string name="dangnhap_bamvaoday">Bấm vào đây</string>
    <string name="dangnhap_sdt_dangky">Số điện thoại đã đăng ký</string>
    <string name="dangnhap_nhap_makh">Nhập mã khách hàng hoặc mã đơn đăng ký</string>
    <string name="dangnhap_nhap_masms">Nhập mã kích hoạt qua SMS</string>
    <string name="dangnhap_them_makh">Thêm mã khách hàng</string>
    <string name="dangnhap_sdt_da_dangky">Số điện thoại đã đăng ký</string>
    <string name="dangnhap_ma_kh">Nhập mã khách hàng</string>
    <string name="dangnhap_ma_kichhoat_sms">Nhập mã kích hoạt qua SMS</string>
    <string name="dangnhap_them_makh_add">Thêm mã khách hàng</string>
    <string name="tab_thongbao">Thông báo</string>
    <string name="tab_tracuu">Tra cứu</string>
    <string name="tab_dichvu">Dịch vụ</string>
    <string name="tab_caidat">Tiện ích</string>
    <string name="tab_thongbao_tb_lichcatnuoc">Tạm ngừng cấp nước</string>
    <string name="tab_thongbao_tb_tttiennuoc">Báo tiền nước</string>
    <string name="tab_thongbao_tb_thanhtoan">Xác nhận thanh toán</string>
    <string name="tab_thongbao_tb_notiennuoc">Nhắc nợ tiền nước</string>
    <string name="tab_thongbao_tb_ghichiso">Thông báo ghi chỉ số</string>
    <string name="tab_thongbao_tb_ttmatnuoc">Sự cố mất nước</string>
    <string name="tab_thongbao_tb_khac">Các thông báo khác</string>
    <string name="tab_tracuu_lichghinuoc">Lịch ghi nước</string>
    <string name="tab_tracuu_diemthutiennuoc">Điểm giao dịch khách hàng</string>
    <string name="tab_tracuu_lichcatnuoc">Lịch tạm ngừng cấp nước</string>
    <string name="tab_tracuu_chisonuoctieuthu">Chỉ số nước tiêu thụ</string>
    <string name="tab_tracuu_thongtinthanhtoantiennuoc">Thông tin thanh toán tiền nước</string>
    <string name="tab_tracuu_tracuuhoadontiennuoc">Tra cứu hóa đơn tiền nước</string>
    <string name="tab_tracuu_webcskh">Website CSKH</string>
    <string name="tab_tracuu_lienketnganhang">Thanh toán online</string>
    <string name="tab_tracuu_goitongdai">Gọi tổng đài</string>
    <string name="tab_tracuu_chon">Chọn</string>
    <string name="tab_tracuu_huy">Hủy</string>
    <string name="tab_tracuu_khongdungdinhdang">Mời bạn chọn ngày tháng năm!</string>
    <string name="tab_tracuu_tieude_ngan">Tiêu đề quá ngắn, bạn vui lòng nhập lại!</string>
    <string name="tab_tracuu_noidung_ngan">Nội dung quá ngắn, bạn vui lòng nhập lại!</string>
    <string name="tab_caidat_ttkh">Thông tin khách hàng</string>
    <string name="tab_caidat_goitongdai">Gọi tổng đài CSKH</string>
    <string name="tab_caidat_webcskh">Website CSKH</string>
    <string name="tab_caidat_ttchung">Thông tin chung</string>
    <string name="tab_caidat_ttungdung">Thông tin ứng dụng</string>
    <string name="tab_caidat_thaydoithongtinkh">Thông tin khách hàng</string>
    <string name="tab_caidat_unđung">Cài đặt ứng dụng</string>
    <string name="tab_caidat_hdsd">Hướng dẫn sử dụng</string>
    <string name="tab_caidat_doimatkhau">Đổi mật khẩu</string>
    <string name="tab_caidat_dangxuat">Đăng xuất</string>
    <string name="tab_caidat_dangxuat_noidung">Bạn có chắc chắn muốn đăng xuất?</string>
    <string name="tab_caidat_dangxuat_co">Có</string>
    <string name="tab_caidat_dangxuat_khong">Không</string>
    <string name="tab_caidat_dangxuat_dangxuatkhongduoc">Bạn không thể đăng xuất!</string>
    <string name="tab_caidat_doimatkhau_khongthanhcong">Bạn đổi mật khẩu không thành công, bạn vui lòng thử lại!</string>
    <string name="tab_caidat_doimatkhau_thanhcong">Bạn đổi mật khẩu thành công!</string>
    <string name="tab_caidat_dangxuat_ok">Ok</string>
    <string name="tab_caidat_laydsdiachinh">Cập nhật DS địa chính</string>
    <string name="tab_dichvu_dkycapnuoc">Yêu cầu lắp đặt nước mới</string>
    <string name="tab_dichvu_dkycapnuoc_nh">Yêu cầu lắp đặt nước ngắn hạn</string>
    <string name="tab_dichvu_thaydoithongtinkh">Thay đổi thông tin khách hàng</string>
    <string name="tab_dichvu_yeucaunangdoido">Yêu cầu thay nâng, dời, dò tìm nước chảy</string>
    <string name="tab_dichvu_hoi_traloi">KH hỏi HueWACO trả lời</string>
    <string name="tab_dichvu_chatzalo">Chat với HueWACO</string>
    <string name="tab_dichvu_barcode">Mã QR thanh toán</string>
    <string name="tab_dichvu_barcode_title">Quý khách vui lòng trình mã vạch dưới đây cho nhân viên thu quầy lúc nộp tiền thay cho giấy báo tiền nước</string>
    <string name="tab_dichvu_gcs">Ghi chỉ số</string>
    <string name="tab_dichvu_bcaosuco">Báo cáo sự cố</string>
    <string name="tab_dichvu_hddt">Hợp đồng điện tử</string>
    <string name="tab_dichvu_plhd">Phụ lục hợp đồng</string>
    <string name="tab_dich_vu_hoa_don_dien_tu">Hóa đơn điện tử</string>
    <string name="tab_dichvu_thaydoithongtin_chon_makh">Chọn mã khách hàng</string>
    <string name="tab_dichvu_thaydoithongtin_tenkh">Tên khách hàng</string>
    <string name="tab_dichvu_thaydoithongtin_diachi">Địa chỉ</string>
    <string name="tab_dichvu_thaydoithongtin_dtlienhe">Điện thoại liên hệ</string>
    <string name="tab_dichvu_thaydoithongtin_email">Email</string>
    <string name="tab_dichvu_thaydoithongtin_lydothaydoitt">Lý do thay đổi thông tin</string>
    <string name="tab_dichvu_thaydoithongtin_doithongtin_thanhcong">Bạn đổi thông tin khách hàng thành công!</string>
    <string name="tab_dichvu_thaydoithongtin_doithongtin_khongthanhcong">Bạn đổi thông tin khách hàng không thành công, vui lòng thử lại!</string>
    <string name="tab_dichvu_dangkycapnuoc_thanhcong">Bạn đăng ký cấp nước thành công!</string>
    <string name="tab_dichvu_dangkycapnuoc_khongthanhcong">Bạn đăng ký cấp nước không thành công, vui lòng thử lại!</string>
    <string name="tab_dichvu_cauhoi_thanhcong">Bạn thêm câu hỏi thành công!</string>
    <string name="tab_dichvu_cauhoi_khongthanhcong">Bạn thêm câu hỏi không thành công, vui lòng thử lại!</string>
    <string name="tab_dichvu_cauhoi_tieude">Mời bạn nhập tiêu đề?</string>
    <string name="tab_dichvu_cauhoi_noidung">Mời bạn nhập câu hỏi?</string>
    <string name="lichghinuoc_date_from">Từ ngày</string>
    <string name="lichghinuoc_date_to">Đến ngày</string>
    <string name="lichghinuoc_btn_search">Tìm kiếm</string>
    <string name="lichghinuoc_chon_makh">Chọn mã khách hàng:</string>
    <string name="lichghinuoc_ngay_ghi">- Ngày ghi nước:</string>
    <string name="lichghinuoc_thang">- Tháng:</string>
    <string name="lichghinuoc_nam">- Năm:</string>
    <string name="lichghinuoc_ky">- Kỳ:</string>
    <string name="lichghinuoc_diachi">- Địa chỉ:</string>
    <string name="lichghinuoc_tgian_lviec">- Thời gian làm việc:</string>
    <string name="lichghinuoc_ngay_thu">- Kinh độ:</string>
    <string name="lichghinuoc_diem_gdich">- Vĩ độ:</string>
    <string name="lichghinuoc_dthoai">- Tên quầy:</string>
    <string name="lichghinuoc_loai">- Mã điểm thu:</string>
    <string name="lichghinuoc_makhuvuc">- Mã khu vực:</string>
    <string name="lichghinuoc_cs_ky">Kỳ</string>
    <string name="lichghinuoc_cs_so_cto">Số công tơ</string>
    <string name="lichghinuoc_cs_ngay_dky">Ngày đầu kỳ</string>
    <string name="lichghinuoc_cs_ngay_cky">Ngày cuối kỳ</string>
    <string name="lichghinuoc_cs_cu">Chỉ số cũ</string>
    <string name="lichghinuoc_cs_moi">Chỉ số mới</string>
    <string name="lichghinuoc_cs_sluong">Sản lượng</string>
    <string name="lichghinuoc_cs_hsnhan">Hệ số nhân</string>
    <string name="lichghinuoc_cs_bcs">BCS</string>
    <string name="lichghinuoc_ttoan_thang">Tháng</string>
    <string name="lichghinuoc_ttoan_nam">Năm</string>
    <string name="lichghinuoc_ttoan_ttien">Tổng tiền</string>
    <string name="lichghinuoc_ttoan_tinhtien">KLTT</string>
    <string name="lichghinuoc_ttoan_tthai_no">T.Toán</string>
    <string name="lichghinuoc_hdon_ddo">Mã điểm đo</string>
    <string name="lichghinuoc_hdon_cso">Bộ chỉ số</string>
    <string name="lichghinuoc_hdon_tthu">Nước tiêu thụ</string>
    <string name="lichghinuoc_hdon_dgia">Đơn giá</string>
    <string name="lichghinuoc_hdon_ttien">Thành tiền</string>
    <string name="tab_caidat_customergroup_idkh">IDKH</string>
    <string name="tab_caidat_customergroup_dcld">Địa chỉ lắp đặt</string>
    <string name="tab_caidat_customergroup_tenkh">Tên KH</string>
    <string name="lichcat_nuoc_id">-ID:</string>
    <string name="lichcat_nuoc_malotrinh">- Mã lộ trình:</string>
    <string name="lichcat_nuoc_makv">- Mã khu vực:</string>
    <string name="lichcat_nuoc_ngaybatdau">- Ngày bắt đầu:</string>
    <string name="lichcat_nuoc_giobatdau">- Giờ bắt đầu:</string>
    <string name="lichcat_nuoc_phutbatdau">- Phút bắt đầu:</string>
    <string name="lichcat_nuoc_ngayketthuc">- Ngày kết thúc:</string>
    <string name="lichcat_nuoc_gioketthuc">- Giờ kết thúc:</string>
    <string name="lichcat_nuoc_phutketthuc">- Phút kết thúc:</string>
    <string name="lichcat_nuoc_lydo">- Lý do:</string>
</resources>