<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_ly_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/layout_30"
        android:layout_marginRight="@dimen/layout_30"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_tv_nam_detail"
            style="@style/CustomTextViewDetail_small"
            android:layout_width="@dimen/layout_160"
            android:text="@string/lichghinuoc_ttoan_nam" />

        <TextView
            android:id="@+id/id_tv_thang_detail"
            style="@style/CustomTextViewDetail_small"
            android:layout_width="@dimen/layout_160"
            android:text="@string/lichghinuoc_ttoan_thang" />

        <TextView
            android:id="@+id/id_tv_tinhtien_detail"
            style="@style/CustomTextViewDetail"
            android:layout_weight="1"
            android:text="@string/lichghinuoc_ttoan_tinhtien"
            android:gravity="right"/>

        <TextView
            android:id="@+id/id_tv_ttien_detail"
            style="@style/CustomTextViewDetail"
            android:layout_weight="1"
            android:text="@string/lichghinuoc_ttoan_ttien"
            android:gravity="right"/>

            <CheckBox
                android:id="@+id/id_cb_tthai_detail"
                style="@style/CustomTextViewDetail"
                android:clickable="false"
                android:layout_width="@dimen/layout_170"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@null"
                />
    </LinearLayout>

</LinearLayout>